Prefer Boolean.valueOf over constructor.